modify posts ui

--- a/_posts/2019-01-29-css-sass.md
+++ b/_posts/2019-01-29-css-sass.md
@@ -2,6 +2,7 @@
 layout: post
 title:  "Sass"
 subtitle: "css"
+hashtag: ["ggg", "aaa", "bbb"]
 date:   2019-01-29 10:45:13 -0400
 background: '/img/posts/06.jpg'
 ---
@@ -15,7 +16,7 @@ background: '/img/posts/06.jpg'
 + ruby설치
 
 윈도우만 아래 링크에서 ruby설치(mac과 linux는 ruby 기본적으로 설치되어있음)
-<http://rubyinstaller.org/downloads/>
+<http://rubyinstaller.org/downloads/>{: target="_blank"}
 
 + cmd창에서 ruby 버전확인
 
@@ -31,10 +32,9 @@ gem install sass
 
 
 ## 3. Sass사용예시
-> ### variables
-
-+ 선언: $변수명: 속성값;
-+ 호출: $변수명
+### variables
++ 선언 - $변수명: 속성값;<br/>
++ 호출 - $변수명
 
 ```css
 /* Sass */
@@ -62,7 +62,7 @@ $default-border: 1px solid black;
 }
 ~~~
 
-> ### nesting
+### nesting
 
 + 한번에 관리하므로 코드의 유지보수가 편하다.
 &로 부모선택자를 참조할 수 있다.
@@ -98,9 +98,9 @@ $default-border: 1px solid black;
 }
 ~~~
 
-> ### import
+### import
 
-+ 호출: @import ".scss 파일명"
++ 호출 - @import ".scss 파일명"
 
 ~~~css
 @import "basic.scss";
@@ -108,10 +108,10 @@ $default-border: 1px solid black;
 ~~~
 
 
-> ### mixin
+### mixin
 
-+ 선언: @mixin mixin명(인자){}
-+ 호출: @include mixin명(인수)
++ 선언 - @mixin mixin명(인자){}
++ 호출 - @include mixin명(인수)
 
 ~~~css
 @mixin btn-style($color, $width, $height){
@@ -125,9 +125,9 @@ blue-btn{
 }
 ~~~
 
-> ### extend
+### extend
 
-+ 호출: @extend 선택자명
++ 호출 - @extend 선택자명
 
 ~~~css
 .btn-style{
