--- a/_posts/2018-11-14-es6-module.md
+++ b/_posts/2018-11-14-es6-module.md
@@ -4,6 +4,7 @@ title:  "Module"
 subtitle: "ES6"
 date:   2018-11-14 10:45:13 -0400
 background: '/img/posts/06.jpg'
+category: "javascript"
 ---
 ## Module
 > 모듈은 구현 세부 사항을 캡슐화하고 공개 API를 노출해 다른 코드에서 쉽게 로드하고 사용할 수 있도록 재사용 가능한 코드 조각이다.<br>ES6에서는 클라이언트 사이드 자바스크립트에서도 동작하는 모듈 기능을 추가하였다.<br>단, 현재 대부분의 브라우저가 ES6의 모듈을 지원하지 않고 있으므로 현재의 브라우저에서 ES6 모듈을 사용하려면 SystemJS, RequireJS 등의 모듈 로더 또는 Webpack 등의 모듈 번들러를 사용하여야 한다.
