--- a/_posts/2018-11-15-es6-promise.md
+++ b/_posts/2018-11-15-es6-promise.md
@@ -4,6 +4,7 @@ title:  "Promise"
 subtitle: "ES6"
 date:   2018-11-15 10:45:13 -0400
 background: '/img/posts/06.jpg'
+category: "javascript"
 ---
 ## Promise
 > 자바스크립트는의 비동기 처리에 사용되는 객체이다.
