--- a/_posts/2019-01-29-css-sass.md
+++ b/_posts/2019-01-29-css-sass.md
@@ -5,10 +5,10 @@ subtitle: "css"
 hashtag: ["ggg", "aaa", "bbb"]
 date:   2019-01-29 10:45:13 -0400
 background: '/img/posts/06.jpg'
+category: "css"
 ---
 
 ## 1. Sass란
-
 > Sass는 일종의 CSS 전처리기이다. 자바스크립트처럼 특정 속성의 값을 변수로 선언하여 필요한 곳에 선언된 변수를 적용할 수도 있고, 코드의 재사용성을 높여준다.
 
 
